--- a/.atom/styles.less
+++ b/.atom/styles.less
@@ -35,3 +35,7 @@ atom-text-editor, atom-text-editor::shadow {
         background-color: #2d3944;
     }
 }
+
+.trailing-spaces-highlight-indentation atom-text-editor:not(.mini)::shadow .lines .line:not(.cursor-line) .trailing-whitespace.indent-guide {
+    background: #ffaa2c;
+}
