Backing up changes

--- a/.atom/styles.less
+++ b/.atom/styles.less
@@ -30,12 +30,13 @@ atom-text-editor::shadow .cursor {
 
 atom-text-editor, atom-text-editor::shadow {
     // Box
-    .highlights .highlight-selected .region {
-        border-color: #4f5b66;
-        background-color: #2d3944;
-    }
+    // .highlights .highlight-selected .region {
+    //     border-color: #4f5b66;
+    //     background-color: #2d3944;
+    // }
 }
 
+// trailing whitespace
 .trailing-spaces-highlight-indentation atom-text-editor:not(.mini)::shadow .lines .line:not(.cursor-line) .trailing-whitespace.indent-guide {
     background: #ffaa2c;
 }
