--- a/.atom/styles.less
+++ b/.atom/styles.less
@@ -2,6 +2,8 @@
 .tree-view {
     font-family: "Fira Sans" !important;
     font-size: 11px !important;
+    background-color: rgb(42, 48, 60);
+    border-right: 1px rgb(34, 40, 52) solid;
 }
 
 // directory structure excluding files
