--- a/.atom/styles.less
+++ b/.atom/styles.less
@@ -27,7 +27,7 @@
 
 // nested directory last child
 .list-tree li.list-nested-item:nth-last-child(1) {
-    margin-bottom: 20px;
+    margin-bottom: 1em;
 }
 
 // currently selected file
@@ -59,7 +59,7 @@
 
 // last file in the list
 .list-tree li:not(.list-nested-item):nth-last-child(1) {
-    margin-bottom: 20px;
+    margin-bottom: 1em;
 }
 
 // children of the selected
