--- a/.atom/styles.less
+++ b/.atom/styles.less
@@ -153,13 +153,11 @@ atom-panel-container.bottom {
     }
 }
 
-// selection box
-// atom-text-editor, atom-text-editor::shadow {
-//     .highlights .highlight-selected .region {
-//         border-color: #4f5b66;
-//         background-color: #2d3944;
-//     }
-// }
+// highlight box
+atom-text-editor .highlights .highlight-selected .region {
+    border: 0;
+    border-radius: 2px;
+}
 
 // trailing whitespace : EOL
 .trailing-spaces-highlight-indentation atom-text-editor:not(.mini)::shadow .lines .line:not(.cursor-line) .trailing-whitespace {
